[gd_scene load_steps=7 format=3 uid="uid://b6uuw2aaivcfh"]

[ext_resource type="Script" uid="uid://lin0dnu4l6it" path="res://Scenes/videosettings.gd" id="1_a5m6v"]
[ext_resource type="Texture2D" uid="uid://cnb65ac0kqje8" path="res://Textures/Sprout Lands - UI Pack - Basic pack/Sprite sheets/Sprite sheet for Basic Pack.png" id="2_tlhkd"]
[ext_resource type="FontFile" uid="uid://s3pjimxs5hu3" path="res://Font/upheavtt.ttf" id="3_tlhkd"]

[sub_resource type="FontFile" id="FontFile_6rf4s"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pl7e0"]
texture = ExtResource("2_tlhkd")
region_rect = Rect2(275, 212, 90, 25)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pvcbm"]
texture = ExtResource("2_tlhkd")
region_rect = Rect2(275, 178, 90, 27)

[node name="VideoSettings" type="Node2D"]
script = ExtResource("1_a5m6v")

[node name="MusicsAndSoundsSettingsScreenContainer" type="VBoxContainer" parent="."]
z_index = 4096
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MusicsAndSoundsSettingsScreen" type="MarginContainer" parent="MusicsAndSoundsSettingsScreenContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="NinePatchRect" type="NinePatchRect" parent="MusicsAndSoundsSettingsScreenContainer/MusicsAndSoundsSettingsScreen"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 2
texture = ExtResource("2_tlhkd")
region_rect = Rect2(461.637, 138.695, 4.44495, 4.84006)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="MarginContainer" type="MarginContainer" parent="MusicsAndSoundsSettingsScreenContainer/MusicsAndSoundsSettingsScreen/NinePatchRect"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 60
theme_override_constants/margin_bottom = 40

[node name="Title" type="Label" parent="MusicsAndSoundsSettingsScreenContainer/MusicsAndSoundsSettingsScreen/NinePatchRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_tlhkd")
theme_override_font_sizes/font_size = 96
text = "VIDEO"
uppercase = true

[node name="ScrollContainer" type="ScrollContainer" parent="MusicsAndSoundsSettingsScreenContainer/MusicsAndSoundsSettingsScreen/NinePatchRect/MarginContainer"]
custom_minimum_size = Vector2(1200, 650)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
horizontal_scroll_mode = 0

[node name="MusicsAndSoundsContainer" type="VBoxContainer" parent="MusicsAndSoundsSettingsScreenContainer/MusicsAndSoundsSettingsScreen/NinePatchRect/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
theme_override_constants/separation = 64

[node name="ChronoSpeedrun" type="CheckButton" parent="MusicsAndSoundsSettingsScreenContainer/MusicsAndSoundsSettingsScreen/NinePatchRect/MarginContainer/ScrollContainer/MusicsAndSoundsContainer"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Chrono speedrun"

[node name="MiniMap" type="CheckButton" parent="MusicsAndSoundsSettingsScreenContainer/MusicsAndSoundsSettingsScreen/NinePatchRect/MarginContainer/ScrollContainer/MusicsAndSoundsContainer"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 64
button_pressed = true
text = "Minimap"

[node name="EternalDay" type="CheckButton" parent="MusicsAndSoundsSettingsScreenContainer/MusicsAndSoundsSettingsScreen/NinePatchRect/MarginContainer/ScrollContainer/MusicsAndSoundsContainer"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Jour Ã©ternel"

[node name="DayCycle" type="CheckButton" parent="MusicsAndSoundsSettingsScreenContainer/MusicsAndSoundsSettingsScreen/NinePatchRect/MarginContainer/ScrollContainer/MusicsAndSoundsContainer"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 64
button_pressed = true
text = "Cycle Jour/Nuit"

[node name="MucisAndSoundsBackButtonContainer" type="HBoxContainer" parent="MusicsAndSoundsSettingsScreenContainer/MusicsAndSoundsSettingsScreen/NinePatchRect/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="MusicsAndSoundsBackButton" type="Button" parent="MusicsAndSoundsSettingsScreenContainer/MusicsAndSoundsSettingsScreen/NinePatchRect/MarginContainer/MucisAndSoundsBackButtonContainer"]
custom_minimum_size = Vector2(250, 80)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_6rf4s")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_pl7e0")
theme_override_styles/pressed = SubResource("StyleBoxTexture_pl7e0")
theme_override_styles/normal = SubResource("StyleBoxTexture_pvcbm")
text = "VALIDATE"

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="pressed" from="MusicsAndSoundsSettingsScreenContainer/MusicsAndSoundsSettingsScreen/NinePatchRect/MarginContainer/MucisAndSoundsBackButtonContainer/MusicsAndSoundsBackButton" to="." method="_on_musics_and_sounds_back_button_pressed"]
